infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: osanvault
  labels:
    name: osanvault
    env: production
